k8s/testing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-login-service
spec:
  type: ClusterIP
  selector:
    app: back-login
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
